Fixes for equal width, set max/min widths, cleaned up gap for article links.

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_article-hero.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_article-hero.sass
@@ -161,6 +161,7 @@ header
 
 .article-links
     display: flex
+    gap: 3%
     justify-content: space-between
     font-size: 12px
     margin-bottom: 22px
